fix: made coming soon bar on custom multi. properly aligned

--- a/client/src/public/css/styles.css
+++ b/client/src/public/css/styles.css
@@ -110,6 +110,8 @@ code {
   font-family: "Computer Modern Unicode Serif";
   width: 750px;
   padding: 8px;
+  top: -66.6%;
+  position: relative;
 }
 
 .button--arrow-key-focused {
